Do not fail to build when using the experimental configuration cache in Gradle